Closed Bug 1388671 Opened 7 years ago Closed 7 years ago

Crash in nsCookieService::AsyncReadComplete

Categories

(Core :: Networking: Cookies, defect)

55 Branch
x86
Windows
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- wontfix
firefox56 --- fixed
firefox57 --- fixed

People

(Reporter: philipp, Assigned: CuveeHsu)

References

Details

(Keywords: crash, regression, Whiteboard: [necko-active])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-16598fca-590c-49e6-8ba3-dc2cf0170808.
=============================================================
Crashing Thread (0)
Frame 	Module 	Signature 	Source
0 	xul.dll 	nsCookieService::AsyncReadComplete() 	netwerk/cookie/nsCookieService.cpp:2774
1 	xul.dll 	ReadCookieDBListener::HandleCompletion(unsigned short) 	netwerk/cookie/nsCookieService.cpp:537
2 	xul.dll 	mozilla::storage::`anonymous namespace'::CompletionNotifier::Run 	storage/mozStorageAsyncStatementExecution.cpp:147
3 	xul.dll 	nsThread::ProcessNextEvent(bool, bool*) 	xpcom/threads/nsThread.cpp:1418
4 	xul.dll 	mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) 	ipc/glue/MessagePump.cpp:96
5 	xul.dll 	MessageLoop::RunHandler() 	ipc/chromium/src/base/message_loop.cc:231
6 	xul.dll 	MessageLoop::Run() 	ipc/chromium/src/base/message_loop.cc:211
7 	xul.dll 	nsBaseAppShell::Run() 	widget/nsBaseAppShell.cpp:156
8 	xul.dll 	nsAppShell::Run() 	widget/windows/nsAppShell.cpp:271
9 	xul.dll 	nsAppStartup::Run() 	toolkit/components/startup/nsAppStartup.cpp:283
10 	xul.dll 	XREMain::XRE_mainRun() 	toolkit/xre/nsAppRunner.cpp:4567
11 	xul.dll 	XREMain::XRE_main(int, char** const, mozilla::BootstrapConfig const&) 	toolkit/xre/nsAppRunner.cpp:4747
12 	xul.dll 	XRE_main(int, char** const, mozilla::BootstrapConfig const&) 	toolkit/xre/nsAppRunner.cpp:4842
13 	xul.dll 	mozilla::BootstrapImpl::XRE_main(int, char** const, mozilla::BootstrapConfig const&) 	toolkit/xre/Bootstrap.cpp:45
14 	firefox.exe 	wmain 	toolkit/xre/nsWindowsWMain.cpp:115
15 	firefox.exe 	__scrt_common_main_seh 	f:/dd/vctools/crt/vcstartup/src/startup/exe_common.inl:253
16 	kernel32.dll 	BaseThreadInitThunk 	
17 	ntdll.dll 	__RtlUserThreadStart 	
18 	ntdll.dll 	_RtlUserThreadStart

this signature seems to increase during the 55 cycle - it seems to hit 32bit builds on all versions of windows and crashing on startup most of the time. perhaps related to bug 867798?
Component: Networking: Cache → Networking: Cookies
Assignee: nobody → juhsu
Whiteboard: [necko-active]
Attached patch nullCheck, v1Splinter Review
Quick fix
Attachment #8895654 - Flags: review?(jduell.mcbugs)
Attachment #8895654 - Flags: review?(jduell.mcbugs) → review+
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/525c6d077e1e
Add null check to avoid crash. r=jduell
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/525c6d077e1e
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Please request Beta approval on this when you get a chance.
Flags: needinfo?(juhsu)
Comment on attachment 8895654 [details] [diff] [review]
nullCheck, v1

Approval Request Comment
[Feature/Bug causing the regression]:Bug 867798
[User impact if declined]:Random Startup Crash
[Is this code covered by automated tests?]:no
[Has the fix been verified in Nightly?]:kinda, we don't have many crashes here. No more Nightly crashes after landed.
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]:No
[Is the change risky?]:No
[Why is the change risky/not risky?]:just a null-check
[String changes made/needed]:No
Flags: needinfo?(juhsu)
Attachment #8895654 - Flags: approval-mozilla-beta?
Comment on attachment 8895654 [details] [diff] [review]
nullCheck, v1

Fix a crash. Beta56+. Should be in 56.0b3.
Attachment #8895654 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.