Bug 1388671 - Add null check to avoid crash. r=jduell, a=gchang

--HG--
extra : source : 525c6d077e1e78492240882db5f133cd99223945